--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
 					videoSrc = 'https://mdstrm.com/live-stream-playlist/5d88dd2229b0890723df2165.m3u8';
 					hlsPlayer(videoSrc);
 					break;
+					case 10:
+					console.log("#10")
+					videoSrc = 'https://mdstrm.com/live-stream-playlist/5d97ca5673de440761ff194e.m3u8';
+					hlsPlayer(videoSrc);
+					break;
+					case 11:
+					console.log("#11")
+					videoSrc = 'https://cloudvideo.servers10.com:8081/8138/index.m3u8';
+					hlsPlayer(videoSrc);
+					break;
+					case 12:
+					console.log("#12")
+					videoSrc = 'https://1206618505.rsc.cdn77.org/LS-ATL-59020-1/playlist.m3u8';
+					hlsPlayer(videoSrc);
+					break;
 
 					//default:
 					//break;
