--- a/index.html
+++ b/index.html
@@ -50,52 +50,52 @@
 				switch(CH){
 					case 1:
 					console.log("#1")
-					videoSrc = 'https://bloomberg-bloomberg-3-br.samsung.wurl.com/manifest/playlist.m3u8';
+					videoSrc = 'http://202.60.106.14:21585/214/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 2:
 					console.log("#2")
-					videoSrc = 'http://tracesportstars-samsunges.amagi.tv/hls/amagi_hls_data_samsunguk-tracesport-samsungspain/CDN/playlist.m3u8';
+					videoSrc = 'https://gstv-gsshop.gsshop.com/gsshop_hd/gsshop_hd.stream/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 3:
 					console.log("#3")
-					videoSrc = 'https://rakuten-euronews-10-be.samsung.wurl.tv/playlist.m3u8';
+					videoSrc = 'https://etv.publichs.com/live5.stream/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 4:
 					console.log("#4")
-					videoSrc = 'https://fashiontv-fashiontv-4-de.samsung.wurl.com/manifest/playlist.m3u8';
+					videoSrc = 'https://live-ch2.cjonstyle.net/cjosplus/live2/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 5:
 					console.log("#5")
-					videoSrc = 'http://amdlive-ch01.ctnd.com.edgesuite.net/arirang_1ch/smil:arirang_1ch.smil/playlist.m3u8';
+					videoSrc = 'https://ebsonair.ebs.co.kr/groundwavefamilypc/familypc1m/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 6:
 					console.log("#6")
-					videoSrc = 'http://bbstv.clouducs.com:1935/bbstv-live/livestream/playlist.m3u8';
+					videoSrc = 'https://ebsonair.ebs.co.kr/plus3familypc/familypc1m/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;										
 					case 7:
 					console.log("#7")
-					videoSrc = 'https://gstv-myshop.gsshop.com/myshop_hd/myshop_hd.stream/playlist.m3u8';
+					videoSrc = 'https://ebsonair.ebs.co.kr/plus1familypc/familypc1m/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 8:
 					console.log("#8")
-					videoSrc = 'https://1206618505.rsc.cdn77.org/LS-ATL-59020-1/playlist.m3u8';
+					videoSrc = 'https://s28.qtcdn.co.kr/media/liveM3U8/idx/518045142/enc/1860408350/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 9:
 					console.log("#9")
-					videoSrc = 'https://mdstrm.com/live-stream-playlist/5d97ca5673de440761ff194e.m3u8';
+					videoSrc = 'https://livejj.hyundaihmall.com:8443/live/ngrp:hmall.stream_pc/playlist.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 					case 10:
 					console.log("#10")
-					videoSrc = 'https://cloudvideo.servers10.com:8081/8138/index.m3u8';
+					videoSrc = 'https://pchlslivesw.lotteimall.com/live/livestream/lotteimalllive_mp4.m3u8';
 					hlsPlayer(videoSrc);
 					break;
 
