--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <script>
 	var CH = 8;
-	var videoSrc = 'https://1206618505.rsc.cdn77.org/LS-ATL-59020-1/playlist.m3u8';
+	var videoSrc = 'https://gstv-gsshop.gsshop.com/gsshop_hd/gsshop_hd.stream/playlist.m3u8';
 
 	function hlsPlayer(videoSrc){
 			var video = document.getElementById('video-player');
